@@ -1,7 +1,5 @@
 package com.example.app.service;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 import com.example.app.enums.*;
 import com.example.app.models.*;
 import com.example.app.repository.RepositoryDependency;
@@ -12,147 +10,156 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.util.*;
 
+import static com.example.app.enums.MaritalStatus.*;
+import static org.junit.jupiter.api.Assertions.*;
+
 class ApplicantServiceTest {
     private ApplicantServiceImpl service;
     private ApplicationService applicationService;
     private ProjectService projectService;
+    private Applicant applicant;
 
     @BeforeEach
     void setUp() throws IOException {
-        // wipe out persisted data to avoid collisions
         RepositoryDependency.getApplicationRepository().deleteAll();
         RepositoryDependency.getProjectRepository().deleteAll();
+        RepositoryDependency.getUserRepository().deleteAll();
+        RepositoryDependency.getEnquiryRepository().deleteAll();
 
         service = new ApplicantServiceImpl();
         applicationService = new ApplicationServiceImpl();
         projectService = new ProjectServiceImpl();
+
+        applicant = new Applicant(null, "User", "pw", "user@mail.com", Role.APPLICANT, "S1234567A", 35,
+                SINGLE, null, null);
+        applicant = (Applicant) RepositoryDependency.getUserRepository().save(applicant);
     }
 
     @Test
-    void getEligibleFlatTypes_variousAgesAndStatus() {
-        // SINGLE & age ≥ 35 => only 2‑room
-        List<FlatType> t1 = service.getEligibleFlatTypes(MaritalStatus.SINGLE, 35);
+    void getEligibleFlatTypes_variousAgesAndStatus() throws IOException {
+        List<FlatType> t1 = service.getEligibleFlatTypes(SINGLE, 35);
         assertEquals(List.of(FlatType._2ROOM), t1);
 
-        // SINGLE & age 25 => age ≥21 branch => both
-        List<FlatType> t2 = service.getEligibleFlatTypes(MaritalStatus.SINGLE, 25);
+        List<FlatType> t2 = service.getEligibleFlatTypes(SINGLE, 25);
         assertEquals(List.of(FlatType._2ROOM, FlatType._3ROOM), t2);
 
-        // MARRIED & age 22 => age ≥21 branch => both
-        List<FlatType> t3 = service.getEligibleFlatTypes(MaritalStatus.MARRIED, 22);
+        List<FlatType> t3 = service.getEligibleFlatTypes(MARRIED, 22);
         assertEquals(List.of(FlatType._2ROOM, FlatType._3ROOM), t3);
 
-        // age < 21 => none
-        List<FlatType> t4 = service.getEligibleFlatTypes(MaritalStatus.SINGLE, 20);
+        List<FlatType> t4 = service.getEligibleFlatTypes(SINGLE, 20);
         assertTrue(t4.isEmpty());
     }
 
     @Test
     void getEligibleFlatTypesForProject_filtersByProjectOfferings() throws IOException {
-        // create a project offering only 2‑room
-        Map<FlatType,Integer> flats = Map.of(FlatType._2ROOM, 5);
-        Project p = new Project(null, "TestProj",
-                new Date(), new Date(), "X-area",
-                99, true, 1,
-                Collections.emptySet(), Collections.emptySet(), flats);
-        // save directly via repo
-        p = RepositoryDependency.getProjectRepository().save(p);
+        Map<FlatType, Integer> flats = Map.of(FlatType._2ROOM, 5);
+        Project p = projectService.createProject("TestProj", new Date(System.currentTimeMillis() - 86400000L * 3), new Date(System.currentTimeMillis() + 86400000L * 3), "Hougang",
+        1, true, 1, Set.of(), Set.of(MaritalStatus.SINGLE), flats);
 
-        Applicant applicant = new Applicant(null, "U", "pw", "e@e", null,
-                "S0000000A", 30, MaritalStatus.SINGLE, null, null);
+        applicant.setAge(30);
+List<FlatType> result = service.getEligibleFlatTypesForProject(applicant, p.getId());
+assertEquals(1, result.size());
+assertEquals(FlatType._2ROOM, result.get(0));
+        }
 
-        // applicant age 30 => eligible for both, but project only has 2‑room
-        List<FlatType> result = service.getEligibleFlatTypesForProject(applicant, p.getId());
-        assertEquals(1, result.size());
-        assertEquals(FlatType._2ROOM, result.get(0));
-    }
+@Test
+void isAbleToApply_checksStatusCorrectly() throws IOException {
+    assertTrue(service.isAbleToApply(applicant));
 
-    @Test
-    void isAbleToApply_whenNoApplicationOrFailedOrWithdrawn() throws IOException {
-        Applicant a = new Applicant(null, "U", "pw", "e@e", null,
-                "S000", 40, MaritalStatus.MARRIED, null, null);
+    Application app = applicationService.save(new Application(null, applicant.getId(), 1, ApplicationStatus.PENDING, false, FlatType._2ROOM));
+    applicant.setApplicationId(app.getId());
+    RepositoryDependency.getUserRepository().save(applicant);
 
-        // no appId => true
-        assertTrue(service.isAbleToApply(a));
+    assertFalse(service.isAbleToApply(applicant));
 
-        // save a PENDING application
-        Application app1 = new Application(null, 0, 0,
-                ApplicationStatus.PENDING, false, FlatType._2ROOM);
-        app1 = applicationService.save(app1);
-        a.setApplicationId(app1.getId());
-        assertFalse(service.isAbleToApply(a));
+    app.setStatus(ApplicationStatus.UNSUCCESSFUL);
+    applicationService.save(app);
+    assertTrue(service.isAbleToApply(applicant));
 
-        // change to UNSUCCESSFUL => true
-        app1.setStatus(ApplicationStatus.UNSUCCESSFUL);
-        applicationService.save(app1);
-        assertTrue(service.isAbleToApply(a));
+    app.setStatus(ApplicationStatus.WITHDRAWN);
+    applicationService.save(app);
+    assertTrue(service.isAbleToApply(applicant));
+}
 
-        // change to WITHDRAWN => true
-        app1.setStatus(ApplicationStatus.WITHDRAWN);
-        applicationService.save(app1);
-        assertTrue(service.isAbleToApply(a));
-    }
+@Test
+void viewCurrentApplication_and_viewCurrentProject() throws IOException {
+    assertNull(service.viewCurrentApplication(applicant));
+    assertNull(service.viewCurrentProject(applicant));
 
-    @Test
-    void viewCurrentApplication_and_viewCurrentProject() throws IOException {
-        Applicant a = new Applicant(null, "U", "pw", "e@e", null,
-                "S000", 30, MaritalStatus.SINGLE, null, null);
+    Project p = projectService.createProject("Proj", new Date(), new Date(), "Jurong",
+            1, true, 1, Set.of(), Set.of(), Map.of(FlatType._2ROOM, 1));
 
-        // no appId => both return null
-        assertNull(service.viewCurrentApplication(a));
-        assertNull(service.viewCurrentProject(a));
+    Application app = applicationService.save(new Application(null, applicant.getId(), p.getId(), ApplicationStatus.PENDING, false, FlatType._2ROOM));
+    applicant.setApplicationId(app.getId());
+    RepositoryDependency.getUserRepository().save(applicant);
 
-        // save a project
-        Project p = new Project(null, "P", new Date(), new Date(),
-                "X", 1, true, 1, Set.of(), Set.of(), Map.of(FlatType._2ROOM,1));
-        p = RepositoryDependency.getProjectRepository().save(p);
+    assertEquals(app.getId(), service.viewCurrentApplication(applicant).getId());
+    assertEquals(p.getId(), service.viewCurrentProject(applicant).getId());
+}
 
-        // save an application pointing to that project
-        Application app = new Application(null, 0, p.getId(),
-                ApplicationStatus.PENDING, false, FlatType._2ROOM);
-        app = applicationService.save(app);
-        a.setApplicationId(app.getId());
+@Test
+void withdrawApplication_setsFlag_andRejectDuplicate() throws IOException {
+    assertThrows(IllegalArgumentException.class, () -> service.withdrawApplication(applicant));
 
-        // now both should return non-null
-        Application gotApp = service.viewCurrentApplication(a);
-        assertNotNull(gotApp);
-        assertEquals(app.getId(), gotApp.getId());
+    Application app = applicationService.save(new Application(null, applicant.getId(), 1, ApplicationStatus.PENDING, false, FlatType._2ROOM));
+    applicant.setApplicationId(app.getId());
+    RepositoryDependency.getUserRepository().save(applicant);
 
-        Project gotProj = service.viewCurrentProject(a);
-        assertNotNull(gotProj);
-        assertEquals(p.getId(), gotProj.getId());
-    }
+    Application result = service.withdrawApplication(applicant);
+    assertTrue(result.isRequestWithdrawal());
 
-    @Test
-    void withdrawApplication_successAndErrors() throws IOException {
-        Applicant a = new Applicant(null, "U", "pw", "e@e", null,
-                "S000", 30, MaritalStatus.SINGLE, null, null);
+    assertThrows(IllegalArgumentException.class, () -> service.withdrawApplication(applicant));
+}
 
-        // no application => IllegalArgument
-        IllegalArgumentException ex1 = assertThrows(
-            IllegalArgumentException.class,
-            () -> service.withdrawApplication(a)
-        );
-        assertTrue(ex1.getMessage().contains("No application"));
+@Test
+void getViewableProjects_basedOnStatusAndVisibility() throws IOException {
+    Project visible = projectService.createProject("Visible", new Date(System.currentTimeMillis() - 86400000L * 3), new Date(System.currentTimeMillis() + 86400000L * 3), "Yishun",
+            1, true, 2, Set.of(), Set.of(SINGLE), Map.of(FlatType._2ROOM, 5));
 
-        // save a fresh application
-        Application app = new Application(null, 0, 0,
-                ApplicationStatus.PENDING, false, FlatType._2ROOM);
-        app = applicationService.save(app);
-        a.setApplicationId(app.getId());
+    Project hidden = projectService.createProject("Hidden", new Date(System.currentTimeMillis() - 86400000L * 3), new Date(System.currentTimeMillis() + 86400000L * 3), "Yishun",
+            1, false, 2, Set.of(), Set.of(SINGLE), Map.of(FlatType._2ROOM, 5));
 
-        // withdraw first time => sets requestWithdrawal=true
-        Application out = service.withdrawApplication(a);
-        assertTrue(out.isRequestWithdrawal());
-        // confirm persisted
-        Application reloaded = applicationService.findById(out.getId());
-        assertTrue(reloaded.isRequestWithdrawal());
+    List<Project> viewable = service.getViewableProjects(applicant);
+    assertEquals(1, viewable.size());
+    assertEquals("Visible", viewable.get(0).getProjectName());
+}
 
-        // withdraw again => IllegalArgument about already requested
-        IllegalArgumentException ex2 = assertThrows(
-            IllegalArgumentException.class,
-            () -> service.withdrawApplication(a)
-        );
-        assertTrue(ex2.getMessage().contains("already been requested"));
-    }
+@Test
+void applyForProject_successfulFlow() throws IOException {
+    Project project = projectService.createProject("TestApply", new Date(), new Date(), "Tampines",
+            1, true, 2, new HashSet<>(), Set.of(SINGLE), Map.of(FlatType._2ROOM, 5));
+
+    assertTrue(service.isAbleToApply(applicant));
+    Application app = service.applyForProject(applicant, project.getId(), FlatType._2ROOM);
+
+    assertNotNull(app);
+    assertEquals(project.getId(), app.getProjectId());
+    assertEquals(FlatType._2ROOM, app.getFlatType());
+}
+
+@Test
+void updateEnquiryAndDelete_success() throws IOException {
+    Project project = projectService.createProject("EnqProj", new Date(), new Date(), "Jurong",
+            1, true, 2, new HashSet<>(), Set.of(SINGLE), Map.of(FlatType._2ROOM, 3));
+
+    Enquiry e = service.submitEnquiry(applicant, "Is this open?", project.getId());
+    assertEquals("Is this open?", e.getQuestion());
+
+    Enquiry updated = service.updateEnquiry(applicant, e.getId(), "Updated question?");
+    assertEquals("Updated question?", updated.getQuestion());
+
+    service.deleteEnquiry(applicant, updated.getId());
+    assertNull(RepositoryDependency.getEnquiryRepository().findById(updated.getId()));
+}
+
+@Test
+void submitAndGetAllEnquiries() throws IOException {
+    Project p = projectService.createProject("QueryProj", new Date(), new Date(), "Pasir Ris",
+            1, true, 1, Set.of(), Set.of(SINGLE), Map.of(FlatType._2ROOM, 2));
+    service.submitEnquiry(applicant, "Q1?", p.getId());
+    service.submitEnquiry(applicant, "Q2?", p.getId());
+
+    List<Enquiry> list = service.getAllEnquiries(applicant);
+    assertEquals(2, list.size());
+}
 }
